fixes click divs overlapping in header

--- a/client/styles/modules.scss
+++ b/client/styles/modules.scss
@@ -9,7 +9,7 @@ body{
   color: white;
   width: 100%;
   display: inline-block;
-  position: relative;
+  position: fixed;
   min-height: 55px;
   max-height: 150px;
   z-index: 100;
@@ -28,7 +28,7 @@ body{
     top: 0;
     line-height: 1;
   }
-  margin-bottom: 15px;
+  margin-bottom: 35px;
 }
 .title{
   text-align: center;
@@ -56,6 +56,8 @@ body{
   line-height: 50px;
 }
 .swiper-body{
+  position: fixed;
+  top: 100px;
   height: 85%;
   color: black;
   position: relative;
